--- a/config/efogtech_trackball_0.conf
+++ b/config/efogtech_trackball_0.conf
@@ -16,3 +16,7 @@ CONFIG_POINTER_2S_MIXER_EMA_ALPHA=10
 
 CONFIG_EC11_ISH_TRIGGER_WINDOW=35
 CONFIG_EC11_ISH_DEBOUNCE_MS=60
+
+CONFIG_USB_DEVICE_PID=0xDEAD
+CONFIG_USB_DEVICE_SN=0xBEEF
+CONFIG_USB_DEVICE_PRODUCT="Endgame Trackball"
