--- a/config/efogtech_trackball_0.conf
+++ b/config/efogtech_trackball_0.conf
@@ -18,5 +18,5 @@ CONFIG_EC11_ISH_TRIGGER_WINDOW=35
 CONFIG_EC11_ISH_DEBOUNCE_MS=60
 
 CONFIG_USB_DEVICE_PID=0xDEAD
-CONFIG_USB_DEVICE_SN=0xBEEF
+CONFIG_USB_DEVICE_SN="iamserial01"
 CONFIG_USB_DEVICE_PRODUCT="Endgame Trackball"
