chore: config defaults

--- a/config/efogtech_trackball_0.conf
+++ b/config/efogtech_trackball_0.conf
@@ -19,4 +19,4 @@ CONFIG_EC11_ISH_DEBOUNCE_MS=60
 
 CONFIG_USB_DEVICE_PID=0xDEAD
 CONFIG_USB_DEVICE_SN="iamserial01"
-CONFIG_USB_DEVICE_PRODUCT="Endgame Trackball"
+CONFIG_USB_DEVICE_PRODUCT="Trackball"
