--- a/boards/arm/efogtech_trackball_0/encoders.dtsi
+++ b/boards/arm/efogtech_trackball_0/encoders.dtsi
@@ -24,10 +24,5 @@
 	};
 };
 
-&left_encoder {
-	status = "okay";
-};
-
-&right_encoder {
-	status = "okay";
-};
+&left_encoder { status = "okay"; };
+&right_encoder { status = "okay"; };
