--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -117,3 +117,5 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=100
 CONFIG_EC11_ISH=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=0
