--- a/config/west.yml
+++ b/config/west.yml
@@ -14,7 +14,7 @@ manifest:
       revision: zephyr-4.1
     - name: zmk-pointer-2s-mixer
       remote: efogdev
-      revision: main
+      revision: debug
     - name: zmk-axis-clamper
       remote: efogdev
       revision: main
