feat: paw3395 support

--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -3,7 +3,6 @@
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52833_QIAA=y
 CONFIG_BOARD_EFOGTECH_TRBL_52833=y
-CONFIG_PMW3610=y
 CONFIG_ARM_MPU=y
 CONFIG_SERIAL=y
 CONFIG_USE_DT_CODE_PARTITION=y
@@ -58,14 +57,7 @@ CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
 CONFIG_BT_TPS=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
 CONFIG_ZMK_POINTER_2S_MIXER=y
-CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=10
-CONFIG_PMW3610_REPORT_INTERVAL_MIN=0
-CONFIG_PMW3610_SMART_ALGORITHM=y
-CONFIG_PMW3610_SQUAL_LOG=y
-CONFIG_PMW3610_SQUAL_LOG_INTERVAL=250
 CONFIG_WS2812_STRIP=y
-CONFIG_PMW3610_ANTI_WARP=y
-CONFIG_PMW3610_ANTI_WARP_THRES=100
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_EXT_POWER=y
@@ -103,14 +95,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
-CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=35
-CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=65
-CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=250
-CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=2500
-CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=15000
-CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=150000
-CONFIG_PMW3610_IGNORE_FIRST_N=15
-CONFIG_PMW3610_IGNORE_AFTER_REST=n
 CONFIG_ZMK_INPUT_PROCESSOR_REPORT_RATE_LIMIT=y
 CONFIG_ZMK_INPUT_PROCESSOR_REPORT_RATE_LIMIT_DEFAULT=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=100
@@ -120,3 +104,4 @@ CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=0
 CONFIG_ZMK_AXIS_CLAMPER=y
+CONFIG_PAW3395=y
