--- a/boards/arm/efogtech_trackball_0/pointer.dtsi
+++ b/boards/arm/efogtech_trackball_0/pointer.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/zmk/p2sm.h>
+#include <dt-bindings/zmk/paw3395-modes.h>
 #include <input/processors/p2sm.dtsi>
 #include <input/processors/axis_clamper.dtsi>
 #include <input/processors/report_rate_limit.dtsi>
@@ -62,11 +63,11 @@
 		reg = <0>;
 		spi-max-frequency = <4000000>;
 		irq-gpios = <&gpio0 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-		cpi = <1200>;
+		cpi = <2400>;
 		evt-type = <INPUT_EV_REL>;
 		x-input-code = <INPUT_REL_X>;
 		y-input-code = <INPUT_REL_Y>;
-		power-mode = <2>;
+		power-mode = <PAW3395_LOW_POWER>;
 		invert-x;
 		invert-y;
 	};
@@ -87,11 +88,11 @@
 		reg = <0>;
 		spi-max-frequency = <4000000>;
 		irq-gpios = <&gpio1 4 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-		cpi = <1200>;
+		cpi = <2400>;
 		evt-type = <INPUT_EV_REL>;
 		x-input-code = <INPUT_REL_X>;
 		y-input-code = <INPUT_REL_Y>;
-		power-mode = <2>;
+		power-mode = <PAW3395_LOW_POWER>;
 	};
 };
 
