--- a/config/efogtech_trackball_0.conf
+++ b/config/efogtech_trackball_0.conf
@@ -17,21 +17,30 @@ CONFIG_EC11_ISH_TRIGGER_WINDOW=35
 CONFIG_EC11_ISH_DEBOUNCE_MS=60
 
 CONFIG_USB_DEVICE_PID=0xDEAD
-CONFIG_USB_DEVICE_SN="iamserial01"
+CONFIG_USB_DEVICE_SN="iamserial05"
 CONFIG_USB_DEVICE_PRODUCT="Trackball"
 
 CONFIG_PAW3395_REPORT_INTERVAL_MIN=0
-CONFIG_PAW3395_INIT_POWER_UP_EXTRA_DELAY_MS=500
-CONFIG_ZMK_BLE_THREAD_STACK_SIZE=768
-CONFIG_ZMK_STUDIO_RPC_THREAD_STACK_SIZE=4096
-CONFIG_INPUT_THREAD_STACK_SIZE=1024
-CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=768
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2348
-CONFIG_MAIN_STACK_SIZE=1324
-CONFIG_IDLE_STACK_SIZE=520
-CONFIG_LV_SPAN_SNIPPET_STACK_SIZE=64
-CONFIG_PRIVILEGED_STACK_SIZE=1524
-CONFIG_ISR_STACK_SIZE=2548
-CONFIG_USB_NRFX_WORK_QUEUE_STACK_SIZE=1224
-CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=768
-CONFIG_USB_WORKQUEUE_STACK_SIZE=1324
+CONFIG_PAW3395_INIT_POWER_UP_EXTRA_DELAY_MS=850
+
+CONFIG_INPUT_THREAD_STACK_SIZE=768
+CONFIG_CBPRINTF_COMPLETE=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_SHELL=y
+CONFIG_INIT_STACKS=n
+CONFIG_THREAD_STACK_INFO=n
+CONFIG_KERNEL_SHELL=n
+CONFIG_THREAD_MONITOR=n
+CONFIG_BOOT_BANNER=n
+CONFIG_THREAD_NAME=n
+CONFIG_DEVICE_SHELL=n
+CONFIG_POSIX_CLOCK=y
+CONFIG_DATE_SHELL=n
+CONFIG_THREAD_RUNTIME_STATS=n
+CONFIG_THREAD_RUNTIME_STATS_USE_TIMING_FUNCTIONS=n
+CONFIG_STATS=n
+CONFIG_STATS_SHELL=n
+CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
