--- a/config/west.yml
+++ b/config/west.yml
@@ -33,5 +33,8 @@ manifest:
     - name: zmk-behavior-follower
       remote: efogdev
       revision: main
+    - name: zmk-keymap-shell
+      remote: efogdev
+      revision: main
   self:
     path: config
