feat: shell integration (west)

--- a/config/west.yml
+++ b/config/west.yml
@@ -14,13 +14,13 @@ manifest:
       revision: zephyr-4.1
     - name: zmk-pointer-2s-mixer
       remote: efogdev
-      revision: main
+      revision: shell
     - name: zmk-axis-clamper
       remote: efogdev
       revision: main
     - name: zmk-report-rate-limit
       remote: efogdev
-      revision: main
+      revision: shell
     - name: zmk-ec11-ish-driver
       remote: efogdev
       revision: main
@@ -34,6 +34,9 @@ manifest:
       remote: efogdev
       revision: main
     - name: zmk-keymap-shell
+      remote: efogdev
+      revision: main
+    - name: zmk-acceleration-curves
       remote: efogdev
       revision: main
   self:
