--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -154,4 +154,6 @@ CONFIG_SHELL_CMD_BUFF_SIZE=255
 CONFIG_SHELL_ARGC_MAX=127
 CONFIG_SHELL_PRINTF_BUFF_SIZE=64
 CONFIG_SHELL_HISTORY=y
+CONFIG_FLASH_SHELL=n
 CONFIG_ZMK_P2SM_SHELL=y
+CONFIG_LOG_MODE_DEFERRED=y
