--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -148,8 +148,8 @@ CONFIG_SHELL_WILDCARD=y
 CONFIG_SHELL_VT100_COLORS=y
 CONFIG_SHELL_METAKEYS=y
 CONFIG_SHELL_HELP=y
-CONFIG_SHELL_CMDS=y
-CONFIG_SHELL_CMDS_RESIZE=y
+CONFIG_SHELL_CMDS=n
+CONFIG_SHELL_CMDS_RESIZE=n
 CONFIG_SHELL_CMD_BUFF_SIZE=255
 CONFIG_SHELL_ARGC_MAX=127
 CONFIG_SHELL_PRINTF_BUFF_SIZE=64
@@ -157,3 +157,7 @@ CONFIG_SHELL_HISTORY=y
 CONFIG_FLASH_SHELL=n
 CONFIG_ZMK_P2SM_SHELL=y
 CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_PWM_SHELL=n
+CONFIG_ADC_SHELL=n
+CONFIG_HWINFO_SHELL=n
+CONFIG_CLOCK_CONTROL_NRF_SHELL=n
