bugfix: enable shell commands

--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -148,7 +148,7 @@ CONFIG_SHELL_WILDCARD=y
 CONFIG_SHELL_VT100_COLORS=y
 CONFIG_SHELL_METAKEYS=y
 CONFIG_SHELL_HELP=y
-CONFIG_SHELL_CMDS=n
+CONFIG_SHELL_CMDS=y
 CONFIG_SHELL_CMDS_RESIZE=n
 CONFIG_SHELL_CMD_BUFF_SIZE=255
 CONFIG_SHELL_ARGC_MAX=127
