--- a/boards/arm/efogtech_trackball_0/pointer.dtsi
+++ b/boards/arm/efogtech_trackball_0/pointer.dtsi
@@ -86,7 +86,7 @@
 		init-retry-count = <100>;
 		reg = <0>;
 		spi-max-frequency = <2000000>;
-		irq-gpios = <&gpio0 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+		irq-gpios = <&gpio0 2 GPIO_ACTIVE_LOW>;
 		cpi = <3200>;
 		evt-type = <INPUT_EV_REL>;
 		x-input-code = <INPUT_REL_X>;
@@ -116,7 +116,7 @@
 		init-retry-count = <100>;
 		reg = <0>;
 		spi-max-frequency = <2000000>;
-		irq-gpios = <&gpio1 4 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+		irq-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
 		rst-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 		cpi = <3200>;
 		evt-type = <INPUT_EV_REL>;
