feat: reduce length of BT device name

--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -69,10 +69,9 @@ CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_PM_SOFT_OFF=y
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_PM_DEVICE=y
-CONFIG_BT_DEVICE_NAME_MAX=28
 CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=2500
 CONFIG_ZMK_BEHAVIOR_METADATA=y
-CONFIG_ZMK_KEYBOARD_NAME="Endgame Trackball"
+CONFIG_ZMK_KEYBOARD_NAME="Endgame"
 CONFIG_ZMK_STUDIO=y
 CONFIG_BT_MAX_CONN=5
 CONFIG_BT_MAX_PAIRED=5
