feat: version shell command

--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -1,8 +1,11 @@
 # SPDX-License-Identifier: MIT
 
+CONFIG_BOARD_EFOGTECH_0_VER_MAJOR=0
+CONFIG_BOARD_EFOGTECH_0_VER_MINOR=2
+CONFIG_BOARD_EFOGTECH_0_VER_PATCH=2
+CONFIG_BOARD_EFOGTECH_TRBL_52833=y
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52833_QIAA=y
-CONFIG_BOARD_EFOGTECH_TRBL_52833=y
 CONFIG_PMW3610=y
 CONFIG_ARM_MPU=y
 CONFIG_HW_STACK_PROTECTION=n
@@ -21,7 +24,7 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_POINTING=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_BACKLIGHT=n
-CONFIG_LED_PWM=n
+CONFIG_LED_PWM=y
 CONFIG_LOG_SPEED=y
 CONFIG_SIZE_OPTIMIZATIONS=n
 CONFIG_SPEED_OPTIMIZATIONS=y
@@ -109,6 +112,7 @@ CONFIG_ZMK_INPUT_PROCESSOR_REPORT_RATE_LIMIT=y
 CONFIG_ZMK_INPUT_PROCESSOR_REPORT_RATE_LIMIT_DEFAULT=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=100
+CONFIG_EC11=y
 CONFIG_EC11_ISH=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
@@ -160,7 +164,6 @@ CONFIG_SHELL_BACKEND_SERIAL_TX_RING_BUFFER_SIZE=128
 CONFIG_SHELL_BACKEND_SERIAL_RX_RING_BUFFER_SIZE=128
 CONFIG_PM_DEVICE_RUNTIME=y
 CONFIG_PM_DEVICE_RUNTIME_EXCLUSIVE=n
-CONFIG_EC11=n
 CONFIG_USB_CDC_ACM_LOG_LEVEL_OFF=n
 CONFIG_USB_CDC_ACM_RINGBUF_SIZE=8192
 CONFIG_LOG_BUFFER_SIZE=8192
@@ -170,4 +173,3 @@ CONFIG_SPI_NRFX_RAM_BUFFER_SIZE=24
 CONFIG_SHELL_PRINTF_BUFF_SIZE=128
 CONFIG_SHELL_HISTORY_BUFFER=24
 CONFIG_USB_REQUEST_BUFFER_SIZE=256
-
