--- a/config/west.yml
+++ b/config/west.yml
@@ -29,5 +29,17 @@ manifest:
     - name: zmk-auto-hold
       remote: efogdev
       revision: main
+    - name: zmk-trigger-on-boot
+      remote: efogdev
+      revision: main
+    - name: zmk-behavior-follower
+      remote: efogdev
+      revision: main
+    - name: zmk-keymap-shell
+      remote: efogdev
+      revision: main
+    - name: zmk-acceleration-curves
+      remote: efogdev
+      revision: main
   self:
     path: config
