--- a/config/west.yml
+++ b/config/west.yml
@@ -4,12 +4,10 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: efogdev
       url-base: https://github.com/efogdev
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
-      remote: petejohanson
-      revision: core/move-to-zephyr-4-1
+      remote: zmkfirmware
+      revision: fee2404
       import: app/west.yml
     - name: zmk-pmw3610-driver
       remote: efogdev
