--- a/boards/efogtech/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/efogtech/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -168,3 +168,4 @@ CONFIG_BT_BUF_ACL_RX_SIZE=69
 CONFIG_BT_BUF_ACL_TX_SIZE=32
 CONFIG_ZMK_BLE_THREAD_STACK_SIZE=1024
 CONFIG_PM_DEVICE_SYSTEM_MANAGED=y
+CONFIG_BT_DEVICE_APPEARANCE=962
