--- a/config/efogtech_trackball_0.conf
+++ b/config/efogtech_trackball_0.conf
@@ -17,3 +17,6 @@ CONFIG_EC11_ISH_DEBOUNCE_MS=60
 
 CONFIG_USB_DEVICE_PID=0xDEAD
 CONFIG_USB_DEVICE_SN="iamserial01"
+
+CONFIG_POINTER_2S_MIXER_STEADY_THRES=3
+CONFIG_POINTER_2S_MIXER_STEADY_COOLDOWN=175
