--- a/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
+++ b/boards/arm/efogtech_trackball_0/efogtech_trackball_0_defconfig
@@ -175,3 +175,7 @@ CONFIG_USB_REQUEST_BUFFER_SIZE=192
 CONFIG_BT_BUF_ACL_RX_SIZE=69
 CONFIG_BT_BUF_ACL_TX_SIZE=32
 CONFIG_ZMK_BLE_THREAD_STACK_SIZE=1360
+CONFIG_BT_CTLR_SCHED_ADVANCED=y
+CONFIG_BT_CTLR_LOW_LAT=y
+CONFIG_BT_CTLR_JIT_SCHEDULING=y
+CONFIG_BUILD_OUTPUT_STRIPPED=y
